syntax = "proto3";

// import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";

package currency;

option go_package = "proto/currency;currency";


service Currency {
	rpc GetCurrencyRate(GetCurrencyRateRequest) returns (GetCurrencyRateResponse);
	rpc StreamCurrencyRates(stream StreamCurrencyRateRequest) returns (stream StreamCurrencyRateResponse);
}

message GetCurrencyRateRequest {
	Currencies initial = 1;
	Currencies final = 2;
}

message GetCurrencyRateResponse {
	double rate = 1;
}

message StreamCurrencyRateRequest {
	Currencies initial = 1;
	Currencies final = 2;
}

message StreamRateResponse {
	Currencies initial = 1;
	Currencies final = 2;
	double rate = 3;
}

message StreamCurrencyRateResponse {
	oneof message {
		StreamRateResponse rate_response = 1;
		google.rpc.Status error = 2;
	}
}


enum Currencies {
  EUR=0;
  USD=1;
  JPY=2;
  BGN=3;
  CZK=4;
  DKK=5;
  GBP=6;
  HUF=7;
  PLN=8;
  RON=9;
  SEK=10;
  CHF=11;
  ISK=12;
  NOK=13;
  HRK=14;
  RUB=15;
  TRY=16;
  AUD=17;
  BRL=18;
  CAD=19;
  CNY=20;
  HKD=21;
  IDR=22;
  ILS=23;
  INR=24;
  KRW=25;
  MXN=26;
  MYR=27;
  NZD=28;
  PHP=29;
  SGD=30;
  THB=31;
  ZAR=32;
}